CSS: Fixed bottom alignment.

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -217,7 +217,7 @@ body {
 #wb-chats .chat-log {
   position: absolute;
   top: 50px;
-  bottom: 40px;
+  bottom: 50px;
   right: 0;
   left: 0;
   margin: 0;
